# pironman5

./: .gitignore  README.md  install.py  openclaw_voice.py  pyproject.toml
pironman5/: __init__.py  _cli.py  _constants.py  _launch_browser.py  config.py  history.py  host.py  pironman5.py  runtime.py  runtime_bridge.py  runtime_core.py  runtime_fan.py  runtime_input.py  runtime_legacy.py  runtime_oled.py  runtime_rgb.py  runtime_status.py  security.py  system.py  version.py
pironman5/variants/: __init__.py  hardware_policy.py  pironman5.py  pironman5_max.py  pironman5_mini.py  pironman5_nas.py  pironman5_pro_max.py  pironman5_ups.py  products.py
pironman5/variants/modules/: __init__.py  core.py  gpio_fan.py  gpio_fan_led.py  history.py  network_info.py  oled.py  oled_ups_pages.py  pi5_power_button.py  pipower5.py  pironman_mcu.py  pwm_fan.py  rtl8125.py  sf_rgb_led.py  vibration_switch.py  ws2812.py
scripts/: change_rpi.gpio_to_rpi.lgpio.sh  check_release_version.py  fix_kali_gpio_spi.sh  install_influxdb.sh  install_lgpio.sh  setup_pipower5.sh  setup_rtl8125.sh  umbrel_patch.sh
sf_rpi_status/: __init__.py
skill/: pironman5-promax.skill
skill/pironman5-promax-skill/: SKILL.md
skill/pironman5-promax-skill/references/: cli-cheatsheet.md  features.md
skill/pironman5-skill/: SKILL.md
skill/pironman5-skill/references/: features.md  workflows.md
tests/: test_cli_system.py  test_history.py  test_install_policy.py  test_launch_browser.py  test_packaging_metadata.py  test_runtime.py  test_runtime_dependencies.py  test_security.py  test_sf_installer.py  test_variant_assembly.py
tools/: sf_installer.py
