[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pironman5"
authors = [
  { name="SunFounder", email="service@sunfounder.com" },
]
description = "Library for monitoring Raspberry Pi system status"
readme = "README.md"
requires-python = ">=3.7"
license = "GPL-2.0-only"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dynamic = ["version"]

dependencies = []

[project.scripts]
pironman5 = "pironman5:_cli.main"

[tool.setuptools]
packages = ["pironman5", "pironman5.variants", "pironman5.variants.modules"]

[project.urls]
"Homepage" = "https://github.com/geoffbelknap/pironman5"
"Bug Tracker" = "https://github.com/geoffbelknap/pironman5/issues"

[tool.setuptools.dynamic]
version = {attr = "pironman5.version.__version__"}
